[project]
name = "lab6-intelligent-search"
version = "0.1.0"
description = ""
authors = [
    {name = "smithroque01-create",email = "smithroque01@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pgmpy (>=1.1.2,<2.0.0) ; python_version >= \"3.13\" and python_version < \"3.15\"",
    "uvicorn (>=0.47.0,<0.48.0)",
    "fastapi (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
